2013-04-22  Stefan Monnier  <monnier@iro.umontreal.ca>

	* minibuffer.el (minibuffer-completion-contents): Fix obsolescence info
	to avoid misleading the user.

2013-04-22  Leo Liu  <sdl.web@gmail.com>

	* info-look.el: Prefer latex2e.info.  (Bug#14240)

2013-04-22  Michael Albinus  <michael.albinus@gmx.de>

	Fix pack/unpack coding.  Reported by David Smith <davidsmith@acm.org>.

	* net/tramp-compat.el (tramp-compat-call-process): Move function ...
	* net/tramp.el (tramp-call-process): ... here
	(tramp-set-completion-function, tramp-parse-putty):
	* net/tramp-adb.el (tramp-adb-execute-adb-command):
	* net/tramp-gvfs.el (tramp-gvfs-send-command):
	* net/tramp-sh.el (tramp-sh-handle-set-file-times)
	(tramp-set-file-uid-gid, tramp-sh-handle-write-region)
	(tramp-call-local-coding-command): Use `tramp-call-process'
	instead of `tramp-compat-call-process'.

	* net/tramp-sh.el (tramp-perl-pack, tramp-perl-unpack): New defconst.
	(tramp-local-coding-commands, tramp-remote-coding-commands): Use them.
	(tramp-sh-handle-file-local-copy, tramp-sh-handle-write-region):
	(tramp-find-inline-compress):Improve traces.
	(tramp-maybe-send-script): Check for Perl binary.
	(tramp-get-inline-coding): Do not redirect STDOUT for local decoding.

2013-04-22  Daiki Ueno  <ueno@gnu.org>

	* epg.el (epg-context-pinentry-mode): New function.
	(epg-context-set-pinentry-mode): New function.
	(epg--start): Pass --pinentry-mode option to gpg command.

2013-04-21  Xue Fuqiao  <xfq.free@gmail.com>

	* comint.el: (comint-dynamic-complete-functions, comint-mode-map):
	`comint-dynamic-complete' is obsolete since 24.1, replaced by
	`completion-at-point'. (Bug#13774)

	* startup.el (normal-no-mouse-startup-screen): Bug fix, the
	default key binding for `describe-distribution' has been moved to
	`C-h C-o'.  (Bug#13970)

2013-04-21  Glenn Morris  <rgm@gnu.org>

	* vc/vc.el (vc-print-log-setup-buttons, vc-print-log-internal):
	Add doc strings.
	(vc-print-log): Clarify interactive prompt.
