@@ -1,3 +1,11 @@
+2013-04-23  Stefan Monnier  <monnier@iro.umontreal.ca>
+
+	* jit-lock.el: Fix signals in jit-lock-force-redisplay.
+	Use lexical-binding.
+	(jit-lock-force-redisplay): Use markers, check buffer's continued
+	existence and beware narrowed buffers.
+	(jit-lock-fontify-now): Adjust call accordingly.
+
 2013-04-22  Stefan Monnier  <monnier@iro.umontreal.ca>
 
 	* minibuffer.el (minibuffer-completion-contents): Fix obsolescence info
